tests/ui/parser/issues/issue-62660.stderr
error: expected one of `!`, `(`, `+`, `,`, `::`, `<`, or `>`, found `)`
  --> $DIR/issue-62660.rs:7:38
   |
LL |     pub fn foo(_: i32, self: Box<Self) {}
   |                                      ^ expected one of 7 possible tokens
   |
help: you might have meant to end the type parameters here
   |
LL |     pub fn foo(_: i32, self: Box<Self>) {}
   |                                      +

error: aborting due to 1 previous error

